added firebase connectivity

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -13,8 +13,22 @@
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
         {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
+        {{#link-to 'dashboard' tagName="li"}}<a href="">Dashboard</a>{{/link-to}}
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         {{#link-to 'about' tagName="li"}}<a href="">About</a>{{/link-to}}
         {{#link-to 'contact' tagName="li"}}<a href="">Contact</a>{{/link-to}}
+        {{#if session.isAuthenticated}}
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Admin<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              {{#link-to 'admin.clients' tagName="li"}}<a href="">My Clients</a>{{/link-to}}
+            </ul>
+          </li>
+        {{/if}}
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
