--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,9 @@
 <div class="jumbotron text-center">
-  <h1>MyPrepPal is Coming Soon!</h1>
+  <h2>MyPrepPal Beta is Coming Soon</h2>
 
   <br/><br/>
 
-  <p>Don't miss our launch date, request an invitation now.</p>
+  <p>Prep Coaches: This app will revolutionize the way you interact with your clients, request an invite to the beta below!</p>
 
   <div class="form-horizontal form-group form-group-lg row">
     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
